# Re-Music

./: .env  .gitignore  build-and-sign.ps1  build_installer.ps1  build_log.txt  check-arch.js  check-repo.js  check_like.js  debug_sort_logic.js  debug_yandex_wave.js  diagnostic_check.js  gen-json.js  index.html  package-lock.json  package.json  prepare-release.ps1  sc.html  task.md  tauri-build.ps1  tauri-dev.ps1  tauri_secret.key  update.json  vite.config.ts
backup/v14_pre_restoration/: PlayerBar.tsx  globals.css  player.css  sidebar.css  useAppStore.ts
backup/v15_ui_fixes_and_gifs/src/: main.tsx
src/: main.tsx
src-tauri/: Cargo.toml  fetch_keys.js  tauri.conf.json  test_vr.js  test_yt.js  test_yt2.js  test_yt3.js  test_yt4.js
src-tauri/capabilities/: default.json
src-tauri/examples/: test_sig.rs
src-tauri/icons/: icon.icns
src-tauri/keys/: remusic.key.pub
src-tauri/src/: auth.rs  config.rs  lib.rs
src-tauri/src/providers/: manager.rs  mod.rs  soundcloud.rs  spotify.rs  yandex.rs  youtube.rs
src/main/: main.ts
src/renderer/: App.tsx
src/renderer/components/: SplashScreen.tsx  UpdateNotifier.tsx
src/renderer/hooks/: useAudioEngine.ts
src/renderer/store/: useAchievementStore.ts  useAppStore.ts  useEqStore.ts  usePlayerStore.ts
src/renderer/styles/: animations.css  content.css  equalizer.css  globals.css  layout.css  lyrics.css  player.css  posters.css  settings.css  sidebar.css
src/renderer/types/: electron.d.ts
src/renderer/utils/: i18n.ts  tauriBridge.ts
test-build/: index.html  package.json  style.css
(+48 files in other folders)
