[package]
name = "re-music"
version = "1.1.5"
description = "RE:Music: Native Rust Music Core"
authors = ["RE:Music Team"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["wry", "test", "custom-protocol", "tray-icon", "devtools"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
aes-gcm = "0.10"
machine-uid = "0.3"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "native-tls", "hickory-dns", "gzip", "brotli", "deflate", "cookies", "stream"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
md5 = "0.7"
urlencoding = "2.1"
url = "2.5"
rand = "0.8"
once_cell = "1.21.4"
futures = "0.3"
chrono = { version = "0.4.44", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
sha2 = "0.10"
sha1 = "0.10"
discord-presence = "0.5.1"
minisign = "0.9.1"
tauri-plugin-single-instance = "2.4.1"
